feat: Specification with TypeORM and Swagger
